--- a/views/index.gohtml
+++ b/views/index.gohtml
@@ -54,4 +54,12 @@
         <hr style="border: 0; border-top: 1px dashed #ccc; margin: 15px 0;">
         <strong>หน้าที่:</strong> ดึงข้อมูลตัวเลข 1 คู่ ตามที่ระบุ (เช่น /api/v1/numbers/12)
     </div>
+
+    <div class="route">
+        <span class="method method-get">GET</span>
+        <span class="route-path">/api/v1/satnums</span>
+        <hr style="border: 0; border-top: 1px dashed #ccc; margin: 15px 0;">
+        <strong>หน้าที่:</strong> ดึงข้อมูลเลขศาสตร์ (SatNums) ทั้งหมด
+    </div>
+
 </div>
