--- a/views/layouts/main.gohtml
+++ b/views/layouts/main.gohtml
@@ -79,11 +79,13 @@
             margin-top: auto;
         }
     </style>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
 
 <header class="layout-header">
     <h1>NumberNiceIC API Service</h1>
+
 </header>
 
 <nav class="navbar">
